@@ -59,7 +59,7 @@ from webob.descriptors import (
 
 from webob.headers import ResponseHeaders
 from webob.request import BaseRequest
-from webob.util import status_reasons, status_generic_reasons
+from webob.util import status_reasons, status_generic_reasons, warn_deprecation
 
 __all__ = ['Response']
 
@@ -692,9 +692,9 @@ class Response(object):
     # set_cookie, unset_cookie, delete_cookie, merge_cookies
     #
 
-    def set_cookie(self, name, value='', max_age=None,
+    def set_cookie(self, name=None, value='', max_age=None,
                    path='/', domain=None, secure=False, httponly=False,
-                   comment=None, expires=None, overwrite=False):
+                   comment=None, expires=None, overwrite=False, key=None):
         """
         Set (add) a cookie for the response.
 
@@ -768,6 +768,15 @@ class Response(object):
            existing cookie.
 
         """
+
+        # Backwards compatibility for the old name "key", remove this in 1.7
+        if name is None and key is not None:
+            warn_deprecation('Argument "key" was renamed to "name".', 1.7, 1)
+            name = key
+
+        if name is None:
+            raise TypeError('set_cookie() takes at least 1 argument')
+
         if overwrite:
             self.unset_cookie(name, strict=False)
 
