@@ -1,6 +1,16 @@
 News
 ====
 
+Unreleased
+----------
+
+Backwards Incompatibilities
+~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+- ``response.set_cookie`` renamed the only required parameter from "key" to
+  "name". The code will now still accept "key" as a keyword argument, and will
+  issue a DeprecationWarning until WebOb 1.7.
+
 1.5.0a0 (2015-07-25)
 --------------------
 
